fix about page, and overflow-x on landing

--- a/app/style.css
+++ b/app/style.css
@@ -22,6 +22,8 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
+
+  overflow-x: hidden;
 }
 
 .navOpacity {
